--- a/styles.css
+++ b/styles.css
@@ -251,7 +251,7 @@ button:hover {
 .secondary-card {
   background-color: white;
   width: 100%;
-  margin-bottom: 5.6%;
+  margin-bottom: 10.4%;
 }
 .secondary-card img {
   width: 100%;
@@ -271,7 +271,7 @@ button:hover {
 .secondary-card1 {
   position: relative;
   text-align: center;
-  padding-bottom: 38%;
+  padding-bottom: 37%;
 }
 img.brian {
   width: 83%;
@@ -324,4 +324,165 @@ img.brian {
 
 .secondary-card-footer-share.fa-instagram {
   padding: 7.5px 8.5px;
+}
+
+.secondary-card2 {
+  text-align: center;
+  background-color: white;
+  padding: 6.2% 8.5% 5% 8.5%;
+}
+
+/* .reframe {
+  height: 75%;
+ width: 100%;
+ overflow: hidden;
+}
+
+.reframe img {
+  width: 100%;
+  height: auto;
+} */
+
+.popular {
+  text-transform: uppercase;
+  font-weight: 400;
+  font-size: 17.5px;
+  letter-spacing: .5px;
+  margin-bottom: 8.4%;
+}
+
+.popular-content {
+  text-align: left;
+  padding-bottom: 4.5%;
+  border-bottom: solid 1px #EEEEEE;
+}
+
+.popular-title {
+  margin-top: 6%;
+  font-size: 11.5px;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+
+.popular-date {
+margin-top: 4%;
+font-weight: 200;
+font-size: 12px;
+font-style: italic;
+letter-spacing: -.1px;
+color: #AAAAAA;
+}
+
+.popular-content-fall {
+  margin-top: 8.5%;
+}
+
+.fall-title {
+  margin-top: 6.4%;
+}
+
+.fall-date {
+  margin-top: 4.3%;
+}
+
+.popular-content-sip {
+  margin-top: 8.5%;
+}
+
+.sip-title {
+  margin-top: 6.7%;
+}
+
+.sip-date {
+  margin-top: 4.1%;
+}
+
+.popular-content-sip {
+  border: none;
+}
+
+.secondary-card3 {
+  text-align: center;
+  padding: 6.5% 8.5% 10%;
+}
+
+.latest {
+  font-size: 17.5px;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+
+.latest-section {
+  position: relative;
+  align-items: center;
+  text-align: left;
+  padding-bottom: 3%;
+  border-bottom: 1px solid #EEEEEE;
+  margin-top: 8%;
+  margin-bottom: -4%;
+}
+
+.latest-image img {
+  display: inline;
+
+  width: 33.6%;
+}
+.latest-content {
+  display: inline;
+  position: absolute;
+  top: -15%;
+  left: 37%;
+}
+.latest-content-title {
+  text-transform: uppercase;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 24px;
+  margin-top: 7%;
+  margin-bottom: -3%;
+}
+
+.latest-content-date {
+  font-style: italic;
+  font-weight: 100;
+  font-size: 12px;
+  color: #AAAAAA;
+}
+
+.latest-section4 {
+  border: none;
+}
+
+.secondary-card4 {
+  text-align: center;
+  padding: 5% 5% 9%;
+}
+
+.secondary-card4 h1 {
+  font-size: 23px;
+  margin: 5.4% 4%;;
+  margin-block-start: none;
+  margin-block-end: none;
+  font-size: 17.5px;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+
+.pinterest-photos {
+  display: inline-flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.secondary-card4 img {
+  width: 29%;
+  margin: 1%;
+}
+
+.footer h4 {
+  color: white;
+  font-weight: lighter;
+  font-size: 15px;
+  margin: 26px 22px 26px;
 }
